多方式登陆跳转链接完毕。 注意：新建Activity必须在AndroidManifest.xml补充它的theme

--- a/BegoniaAPP/app/src/main/AndroidManifest.xml
+++ b/BegoniaAPP/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".otherSingUpActivity"
+            android:name=".otherSignUpActivity"
+            android:theme="@style/Theme.ZKYapp"
             android:exported="false" />
         <activity
             android:name=".EventOrderActivity"
